# cmd/api/main.go
@@ -8,7 +8,23 @@ import (
 	"eva/pkg/logging"
 	"eva/pkg/postgresql"
 	"log"
+	//_ "eva/docs"
 )
+
+// @title Swagger EVA API
+// @version 0.1
+// @description EVA API documentation
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name vintobolt
+// @contact.url vintobolt
+// @contact.email vintobolt@protonmail.com
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host 127.0.0.1:8089
+// @BasePath /api/v1/
 
 func main() {
 	log.Println("EVA server starting")
