# internal/routes/users.go
@@ -11,5 +11,6 @@ func GetUserApiRoutes(e *echo.Echo, c controllers.Controllers) {
 	{
 		v1.GET("/users/:login", c.UserController.GetExistUser)
 		v1.POST("/users/signin", c.UserController.SignIn)
+		v1.POST("/users/signup", c.UserController.SignUp)
 	}
 }
